--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   justify-content: center;
   align-items: center;
 }
+.flex-main-row{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+  align-items:flex-start
+}
 .red-border{
   border: 1px solid rgba(0, 0, 0, 0.137);
 }
